cleanup & complete basics

--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -469,7 +469,6 @@
   volume = {31},
   number = {5},
   pages = {1637--1646},
-  issn = {0167-7055, 1467-8659},
   doi = {10.1111/j.1467-8659.2012.03169.x},
   url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1467-8659.2012.03169.x},
   urldate = {2024-09-26},
@@ -507,6 +506,21 @@
   url = {https://www.nature.com/articles/s41597-022-01338-x},
   urldate = {2023-10-18},
   abstract = {Abstract                            Complex morphological traits are the product of many genes with transient or lasting developmental effects that interact in anatomical context. Mouse models are a key resource for disentangling such effects, because they offer myriad tools for manipulating the genome in a controlled environment. Unfortunately, phenotypic data are often obtained using laboratory-specific protocols, resulting in self-contained datasets that are difficult to relate to one another for larger scale analyses. To enable meta-analyses of morphological variation, particularly in the craniofacial complex and brain, we created MusMorph, a database of standardized mouse morphology data spanning numerous genotypes and developmental stages, including E10.5, E11.5, E14.5, E15.5, E18.5, and adulthood. To standardize data collection, we implemented an atlas-based phenotyping pipeline that combines techniques from image registration, deep learning, and morphometrics. Alongside stage-specific atlases, we provide aligned micro-computed tomography images, dense anatomical landmarks, and segmentations (if available) for each specimen (               N               \,=\,10,056). Our workflow is open-source to encourage transparency and reproducible data collection. The MusMorph data and scripts are available on FaceBase (               www.facebase.org               ,               https://doi.org/10.25550/3-HXMC               ) and GitHub (               https://github.com/jaydevine/MusMorph               ).},
+  langid = {english}
+}
+
+@article{dhanachandraImageSegmentationUsing2015,
+  title = {Image {{Segmentation Using K}} -Means {{Clustering Algorithm}} and {{Subtractive Clustering Algorithm}}},
+  author = {Dhanachandra, Nameirakpam and Manglem, Khumanthem and Chanu, Yambem Jina},
+  date = {2015},
+  journaltitle = {Procedia Computer Science},
+  shortjournal = {Procedia Computer Science},
+  volume = {54},
+  pages = {764--771},
+  issn = {18770509},
+  doi = {10.1016/j.procs.2015.06.090},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1877050915014143},
+  urldate = {2024-10-06},
   langid = {english}
 }
 
@@ -815,6 +829,25 @@
   file = {/home/ro/Zotero/storage/GJZQXI7M/Gonzalez and Woods - 2007 - Digital image processing.pdf}
 }
 
+@incollection{gradyEnergyMinimizationApproach2006,
+  title = {An {{Energy Minimization Approach}} to the {{Data Driven Editing}} of {{Presegmented Images}}/{{Volumes}}},
+  booktitle = {Medical {{Image Computing}} and {{Computer-Assisted Intervention}} – {{MICCAI}} 2006},
+  author = {Grady, Leo and Funka-Lea, Gareth},
+  editor = {Larsen, Rasmus and Nielsen, Mads and Sporring, Jon},
+  editora = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y. and Weikum, Gerhard},
+  editoratype = {redactor},
+  date = {2006},
+  volume = {4191},
+  pages = {888--895},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/11866763_109},
+  url = {http://link.springer.com/10.1007/11866763_109},
+  urldate = {2024-10-06},
+  isbn = {978-3-540-44727-6},
+  file = {/home/ro/Zotero/storage/W74HRL8Z/Grady and Funka-Lea - 2006 - An Energy Minimization Approach to the Data Driven Editing of Presegmented ImagesVolumes.pdf}
+}
+
 @article{greiweWearableTechnologyHow2020,
   title = {Wearable {{Technology}} and {{How This Can Be Implemented}} into {{Clinical Practice}}},
   author = {Greiwe, Justin and Nyenhuis, Sharmilee M.},
@@ -883,11 +916,24 @@
   volume = {9},
   number = {3},
   pages = {171--189},
-  issn = {2192-6611, 2192-662X},
   doi = {10.1007/s13735-020-00195-x},
   url = {https://link.springer.com/10.1007/s13735-020-00195-x},
   urldate = {2024-09-30},
   langid = {english}
+}
+
+@inproceedings{hahnIWTinteractiveWatershedTransform2003,
+  title = {{{IWT-interactive}} Watershed Transform: A Hierarchical Method for Efficient Interactive and Automated Segmentation of Multidimensional Gray-Scale Images},
+  shorttitle = {{{IWT-interactive}} Watershed Transform},
+  author = {Hahn, Horst K. and Peitgen, Heinz-Otto},
+  editor = {Sonka, Milan and Fitzpatrick, J. Michael},
+  date = {2003-05-16},
+  pages = {643},
+  location = {San Diego, CA},
+  doi = {10.1117/12.481097},
+  url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?doi=10.1117/12.481097},
+  urldate = {2024-10-06},
+  eventtitle = {Medical {{Imaging}} 2003}
 }
 
 @article{halleOpenAnatomyBrowser2017,
@@ -2279,7 +2325,6 @@
   volume = {34},
   number = {3},
   pages = {389--407},
-  issn = {0938-8990, 1432-1777},
   doi = {10.1007/s00335-023-10005-4},
   url = {https://link.springer.com/10.1007/s00335-023-10005-4},
   urldate = {2024-09-27},
@@ -2422,6 +2467,15 @@
   urldate = {2024-09-12},
   eventtitle = {2020 {{International Conference}} on {{Computer Engineering}}, {{Network}}, and {{Intelligent Multimedia}} ({{CENIM}})},
   isbn = {978-1-72818-283-4}
+}
+
+@artwork{shabalinKmeansClusteringKmeans2024,
+  title = {K-Means Clustering. {{K-means}}++.},
+  author = {Shabalin, Andrey A.},
+  date = {2024},
+  url = {https://shabal.in/visuals/kmeans/1.html},
+  urldate = {2024-10-06},
+  langid = {english}
 }
 
 @book{shapiroComputerVision2001,
