--- a/includes/thesis/part02-chapter01-introduction.tex
+++ b/includes/thesis/part02-chapter01-introduction.tex
@@ -74,9 +74,10 @@ After receiving the results, the author calculated their accuracy by comparing t
 The \acrfull{dc} \cite{diceMeasuresAmountEcologic1945} was chosen as a similarity score for comparison of segmentation quality between the guided segmentation versus the unguided one.
 This has been done using the \texttt{SlicerRT} \cite{pinterSlicerRTRadiationTherapy2012} extension for the 3D Slicer software package.
 
-\section{Structure of this Thesis}\label{s:introduction-structureofthisthesis}
 
-% This section is followed by the background \cref{c:background}, where the necessary theoretical background will be explained.
-% In \cref{c:casestudy}, the setup of tweet collection will be explained and the execution documented.
-% Afterwards, in \cref{c:analysis}, sentiments of collected tweets will be determined and converted into a time series which will then be compared to the time series of share prices.
-% Finally, in \cref{c:conclusion} the results of this work will be summed up, and limitations and further points of interest will be pointed out.
+\section{Structure of this Thesis}\label{s:introduction-structureofthisthesis}
+The next chapter is the background (\cref{c:background}), where the necessary theoretical background will be explained.\\
+In \cref{c:materialsNmethods}, the origin of the datasets, and the evaluation of the segmentation will be described.\\
+Afterwards, in \cref{c:resuls}, results of the segmentations will be listed.\\
+Finally, in \cref{c:conclusion} the results of this work will be concluded, 
+the limitations explained and further subjects of research explored.
