--- a/includes/thesis/part02-chapter04-results.tex
+++ b/includes/thesis/part02-chapter04-results.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../../thesis.tex
 
-\chapter{Results}
-\label{c:resuls}
+\chapter{Results}\label{c:resuls}
+
 % https://www.baeldung.com/cs/latex-draw-charts
 
 \begin{figure}[h!]
