--- a/includes/thesis/part02-chapter05-conclusion.tex
+++ b/includes/thesis/part02-chapter05-conclusion.tex
@@ -1,7 +1,6 @@
 %!TEX root = ../../thesis.tex
 
-\chapter{Conclusion}
-\label{c:conclusion}
+\chapter{Conclusion}\label{c:conclusion}
 
 % This final section provides a short summary of literature research, analysis and comparison in \cref{s:conclusions-summary}.
 % \Cref{s:conclusions-discussion} critically discusses the results and shows limitations and shortcomings.
