--- a/includes/thesis/part01-page4-abstract.tex
+++ b/includes/thesis/part01-page4-abstract.tex
@@ -12,7 +12,7 @@
 \AbstractHead{Abstract in English}
 \noindent
 \normalsize
-\lipsum[1]
+\lipsum[1] % TODO
 
 \SomeSpace
 \AbstractHead{Keywords}
@@ -26,7 +26,7 @@
 \AbstractHead{Abstract in German}
 \noindent
 \normalsize
-\lipsum[1]
+\lipsum[1] % TODO
 
 \SomeSpace
 \AbstractHead{Keywords}
